fix additional design , fix ranking fav , fix dashboard